# risingwave-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: connection.py  ddl_tools.py  dml_tools.py  explain.py  main.py  management_tools.py  query_tools.py  schema_tools.py
