[tool.poetry]
name = "risingwave-mcp"
version = "0.1.0"
description = "A RisingWave MCP project using fastmcp and risingwave-py"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastmcp = "^0.1.0"
risingwave-py = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"